--- a/app/styles.css
+++ b/app/styles.css
@@ -13,14 +13,35 @@ body {
     flex-direction: row;
     justify-content: space-between;
 
+    #header-left {
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+    }
+
+    #header-right {
+        margin-top: 8px;
+    }
+
     h1 {
         color: hsl(219, 85%, 26%);
-        font-size: 26px;
+        font-size: 24px;
+        margin: 0 0 34px 0;
     }
     #marked {
         color: hsl(219, 12%, 42%);
         font-size: 16px;
         text-decoration: none;
+    }
+    #numOfNotifications {
+        color: white;
+        background-color: hsl(219, 85%, 26%);
+        border-radius: 5px;
+        /* width: 30px; */
+        height: 26px;
+        font-size: 18px;
+        text-align: center;
+        padding: 0px 12px;
     }
 }
 .notification-container {
@@ -34,6 +55,12 @@ body {
 
     h3 {
         margin: 0;
+        color: hsl(219, 14%, 63%);
+        font-weight: 500;
+        .name {
+            color: hsl(224, 21%, 14%);
+            font-weight: 800;
+        }
     }
     h3::after {
         position: absolute;
@@ -52,6 +79,7 @@ body {
     }
     .dayof {
         margin: 7px 0 0 0;
+        color: hsl(219, 14%, 63%);
     }
 }
 #pm {
