user info added

--- a/app/styles.css
+++ b/app/styles.css
@@ -77,7 +77,7 @@ body {
         text-decoration: none;
         color: black;
     }
-    .dayof {
+    .time {
         margin: 7px 0 0 0;
         color: hsl(219, 14%, 63%);
     }
