--- a/app/styles.css
+++ b/app/styles.css
@@ -37,7 +37,6 @@ body {
         color: white;
         background-color: hsl(219, 85%, 26%);
         border-radius: 5px;
-        /* width: 30px; */
         height: 26px;
         font-size: 18px;
         text-align: center;
@@ -53,6 +52,15 @@ body {
     gap: 0 20px;
     padding: 20px 30px;
 
+    .container-right {
+        margin-top: 6px;
+    }
+
+    .userImage {
+        width: 50px;
+        height: 50px;
+    }
+
     h3 {
         margin: 0;
         color: hsl(219, 14%, 63%);
@@ -62,7 +70,9 @@ body {
     .name {
         color: hsl(224, 21%, 14%);
         font-weight: 800;
-        /* padding-right: 4px; */
+    }
+    .sub {
+        font-weight: 800;
     }
     .sub:hover {
         color: hsl(219, 85%, 26%);
