--- a/app/styles.css
+++ b/app/styles.css
@@ -40,7 +40,7 @@ body {
         height: 26px;
         font-size: 18px;
         text-align: center;
-        padding: 0px 12px;
+        padding: 3px 12px 0;
     }
 }
 .notification-container {
