--- a/app/styles.css
+++ b/app/styles.css
@@ -101,7 +101,7 @@ body {
     }
 }
 .pm-container {
-    display: none; 
+    /* display: none;  */
     border: 1px solid hsl(219, 14%, 63%);
     padding: 20px;
     margin-top: 10px;
