--- a/app/styles.css
+++ b/app/styles.css
@@ -32,6 +32,11 @@ body {
         color: hsl(219, 12%, 42%);
         font-size: 16px;
         text-decoration: none;
+
+        &:hover {
+            color: hsl(219, 85%, 26%);
+            text-decoration: underline;
+        }
     }
     #numOfNotifications {
         color: white;
@@ -101,11 +106,15 @@ body {
     }
 }
 .pm-container {
-    /* display: none;  */
     border: 1px solid hsl(219, 14%, 63%);
     padding: 20px;
     margin-top: 10px;
     p {
         margin: 0; 
+        color: hsl(219, 14%, 63%); 
+    }
+
+    &:hover {
+        background-color: hsl(205, 33%, 90%);
     }
 }
